Fix overflow.

--- a/ui/appui-react/src/appui-react/childwindow/PopoutWidget.scss
+++ b/ui/appui-react/src/appui-react/childwindow/PopoutWidget.scss
@@ -2,9 +2,13 @@
  * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
  * See LICENSE.md in the project root for license terms and full copyright notice.
  *--------------------------------------------------------------------------------------------*/
-
 .uifw-popout-widget-filled-container {
   display: flex;
   height: 100%;
   width: 100%;
+}
+
+.uifw-childWindow-popoutWidget_reparented {
+  display: flex;
+  height: 100%;
 }
